# polyfit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: .polynomial.h.swp  csvparse.h  polynomial.h  utils.h
src/: main.cpp  polynomial.cpp  utils.cpp
